# Ticket-Categorization

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PRODUCTION_READINESS.md  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: ci.yml
scripts/: dashboard.py  evaluate.py  evaluate_predictions.py  run_batch.py  run_local.py
servicenow/: business_rule.example.js
sql/: audit_table.sql  predictions_table.sql
src/ticket_router/: audit.py  batch.py  bigquery_source.py  classifier.py  config.py  dashboard.py  evaluation.py  logging_config.py  main.py  redaction.py  results_writer.py  routing.py  schemas.py  security.py  service.py  servicenow.py
tests/: conftest.py  test_api.py  test_audit.py  test_batch.py  test_classifier.py  test_config.py  test_dashboard.py  test_evaluation.py  test_redaction.py  test_routing.py  test_schemas.py  test_security.py  test_service.py  test_servicenow.py
