[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticket-router"
version = "1.0.0"
description = "Classifies help desk tickets with Gemini on Vertex AI and routes them to ServiceNow."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Nomel Esso" }]
keywords = ["llm", "vertex-ai", "gemini", "servicenow", "fastapi", "cloud-run", "classification"]
dependencies = [
    "fastapi==0.137.2",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.14.1",
    "google-genai==2.8.0",
    "google-cloud-bigquery==3.42.0",
    "httpx==0.28.1",
    "tenacity==9.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.18",
    "mypy==2.1.0",
    "pandas==2.2.3",
]

[project.urls]
Repository = "https://github.com/Vouvou225/Ticket-Categorization"

[tool.hatch.build.targets.wheel]
packages = ["src/ticket_router"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI uses function calls (Depends/Header) as defaults

[tool.ruff.lint.per-file-ignores]
# dashboard.py embeds an HTML/CSS/JS template where line length is not meaningful
"src/ticket_router/dashboard.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["ticket_router"]
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"
